# vkhs

./: .gitignore  .gitmodules  ANN.txt  CHANGELOG.md  LICENSE  README.md  VKHS.cabal  cabal.sandbox.config  default.nix  ghci.sh  mktags.sh  run.sh  stack.yaml
app/aux/: Util.hs
app/common/: Util.hs
app/rss/: README.md
app/runhaskell/: find-reposts.hs  groupsearch.hs  list-countries.lhs  moscowgroups.hs  search-groups.hs  search-people.hs  search-people2.hs  set-photo.hs
app/vkq/: Main.hs
src/: VKNews.hs  VKQ.hs  VKQ2.hs
src/Data/Label/: Derive.hs
src/Network/Protocol/: Cookie.hs
src/Network/Protocol/Http/: Data.hs
src/Network/Shpider/: Forms.hs  Pairs.hs  TextUtils.hs
src/Test/: Debug.hs
src/Text/: Namefilter.hs
src/Text/HTML/TagSoup/: Parsec.hs
src/Web/: VKHS.hs  VKHS2.hs
src/Web/VKHS/: API.hs  Client.hs  Coroutine.hs  Curl.hs  Error.hs  Imports.hs  Login.hs  Monad.hs  Types.hs
src/Web/VKHS/API/: Aeson.hs  Base.hs  Simple.hs  Types.hs
src/Web/VKHS2/: Types.hs
