
name:                VKHS2
version:             0.5.7
synopsis:            Provides access to Vkontakte social network via public API
description:
    Provides access to Vkontakte API methods. Library requires no interaction
    with the user during Implicit-flow authentication.

license:             BSD3
license-file:        LICENSE
author:              Sergey Mironov
maintainer:          ierton@gmail.com
copyright:           Copyright (c) 2012, Sergey Mironov
category:            Web
build-type:          Simple
cabal-version:       >=1.6
homepage:            http://github.com/grwlf/vkhs

library
  hs-source-dirs:    src
  other-modules:

  -- maybe not elegant, but convenient during tests
  -- if os(windows)
  --   include-dirs:   .\curl-7.25.0-devel-mingw32\include
  --   extra-lib-dirs: .\curl-7.25.0-devel-mingw32\bin

  exposed-modules:
                     Web.VKHS2
                     Web.VKHS2.Types

  build-depends:     base >=4.6 && <5,
                     containers,
                     mtl,
                     bytestring,
                     http-streams,
                     cookie,
                     HsOpenSSL,
                     blaze-builder,
                     io-streams,
                     attoparsec


executable vkq
  hs-source-dirs:    src
  main-is:           VKQ2.hs

