
name:                VKHS
version:             0.6.0
synopsis:            Provides access to Vkontakte social network via public API
description:
    Provides access to Vkontakte API methods. Library requires no interaction
    with the user during Implicit-flow authentication.

license:             BSD3
license-file:        LICENSE
author:              Sergey Mironov
maintainer:          ierton@gmail.com
copyright:           Copyright (c) 2012, Sergey Mironov
category:            Web
build-type:          Simple
cabal-version:       >=1.6
homepage:            http://github.com/grwlf/vkhs

library
  hs-source-dirs:    src
  other-modules:

  exposed-modules:
                     Web.VKHS
                     Web.VKHS.Types
                     Web.VKHS.Monad
                     Web.VKHS.Client
                     Web.VKHS.Login

  build-depends:     base >=4.6 && <5,
                     containers,
                     mtl,
                     bytestring,
                     http-client,
                     http-client-tls,
                     network-uri,
                     pipes,
                     pipes-http,
                     time,
                     data-default-class,
                     parsec,
                     tagsoup,
                     case-insensitive,
                     http-types


executable vkq
  hs-source-dirs:    src
  main-is:           VKQ.hs


